# BayCal

./: .buildinfo  .gitignore  .readthedocs.yaml  MANIFEST.in  NOTICE.txt  README.md  __init__.py  contributors.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.cfg  support.html
.github/workflows/: github-actions.yml  sphinx.yml
_modules/: index.html
_modules/workspace/src/: LikelihoodModel.html
_sources/: index.rst.txt  quickstart.rst.txt
autoapi/workspace/src/: index.html
doc/: requirements.txt
doc/source/: conf.py  index.rst  install.rst  quickstart.rst
docs/: requirements.txt
docs/source/: conf.py  install.rst  support.rst
examples/fgr/: test_external_gp.xml  test_external_gp_gpCov.xml  test_external_gp_project_gpCov.xml  test_external_gp_projection_with_basis.xml  test_external_gp_projection_with_basis_and_proposal.xml  test_raven_gp.xml  tests
examples/fgr/csv_data/: BISON_FGR100.csv  BISON_FGR100_0.csv  BISON_FGR100_1.csv  BISON_FGR100_10.csv  BISON_FGR100_100.csv  BISON_FGR100_11.csv  BISON_FGR100_12.csv  BISON_FGR100_13.csv  BISON_FGR100_14.csv  BISON_FGR100_15.csv  BISON_FGR100_16.csv  BISON_FGR100_17.csv  BISON_FGR100_18.csv  (+362 more)
examples/seth_c/: test_external_gp_project_gpCov.xml
src/: LikelihoodModel.py  __init__.py
src/LikelihoodModels/: Factory.py  LikelihoodBase.py  NormalModel.py  __init__.py
tests/: test_multiTargets.xml  test_mvn_likelihood.xml  test_mvn_likelihood_external.xml  tests
tests/multiTargets/: generateData.py  model.py  plot.py
(+41 files in other folders)
