[metadata]
name = baycal-ravenframework
version = 1.0.0
description = BayCal plugin for RAVEN framework
long_description = file: BayCal/README.md
license_files = BayCal/LICENSE BayCal/NOTICE.txt
url = https://github.com/idaholab/BayCal

[options]
packages =
    BayCal
    BayCal/src
    BayCal/src/LikelihoodModels

python_requires = >=3.7

install_requires =
   raven_framework >=3.0
